--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>SpotiiFree - Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Entre em nossa plataforma</ion-card-subtitle>
+      <ion-card-title>Login</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="fixed">Usuário:</ion-label>
+        <ion-input clearInput></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="fixed">Senha:</ion-label>
+        <ion-input clearInput type="password"></ion-input>
+      </ion-item>
+
+      <ion-button size="large" expand="block">Entrar</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
