adição do icone da aplicação

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start" color="primary">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <img src="assets/icon/favicon.ico" width="32px" style="float: left">
     <ion-title>
       SpotiiFree - Home
     </ion-title>
