--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+    <img src="assets/icon/favicon.ico" width="32px" style="float: left; margin-left: 10px">
     <ion-title>SpotiiFree - Login</ion-title>
   </ion-toolbar>
 </ion-header>
