--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,17 +1,14 @@
 <ion-header>
 
-=======
   <ion-toolbar>
     <img src="assets/icon/favicon.ico" width="32px" style="float: left; margin-left: 10px">
     <ion-title>SpotiiFree - Login</ion-title>
->>>>>>> d7687375f1f59774d6eced29ad0442c0159f92f3
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="loginUsuario(validations_form.value)">
 
-<<<<<<< HEAD
     <ion-item>
       <ion-label position="floating" color="primary">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
@@ -41,7 +38,6 @@
     <label class="error-message">{{ errorMessage }}</label>
   </form>
   <p class="go-to-register">
-    Não te uma conta? <a (click)="goToRegistroPage()">Crie uma conta</a>
+    Não tem uma conta? <a (click)="goToRegistroPage()">Crie uma conta</a>
   </p>
-=======
  
