--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -37,7 +37,7 @@
 
     <label class="error-message">{{ errorMessage }}</label>
   </form>
-  <p class="go-to-register">
+  <p class="goToRegistroPage">
     Não tem uma conta? <a (click)="goToRegistroPage()">Crie uma conta</a>
   </p>
  
