--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,4 @@
 <ion-header>
-
   <ion-toolbar>
     <img src="assets/icon/favicon.ico" width="32px" style="float: left; margin-left: 10px">
     <ion-title>SpotiiFree - Login</ion-title>
@@ -15,7 +14,8 @@
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.email">
-        <div class="error-message" *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
+        <div class="error-message"
+          *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
           {{ validation.message }}
         </div>
       </ng-container>
@@ -27,17 +27,17 @@
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
-        <div class="error-message" *ngIf="validations_form.get('password').hasError(validation.type) && (validations_form.get('password').dirty || validations_form.get('password').touched)">
+        <div class="error-message"
+          *ngIf="validations_form.get('password').hasError(validation.type) && (validations_form.get('password').dirty || validations_form.get('password').touched)">
           {{ validation.message }}
         </div>
       </ng-container>
     </div>
 
-    <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Login</ion-button>
+    <ion-button expand="block" size="large" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Login</ion-button>
 
     <label class="error-message">{{ errorMessage }}</label>
   </form>
   <p class="goToRegistroPage">
     Não tem uma conta? <a (click)="goToRegistroPage()">Crie uma conta</a>
   </p>
- 
