--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,13 +1,14 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Registro</ion-title>
+  <ion-toolbar>
+    <img src="assets/icon/favicon.ico" width="32px" style="float: left; margin-left: 10px">
+    <ion-title>SpotiiFree - Registro</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
     <ion-item>
-      <ion-label  position="floating" color="primary">Nome</ion-label>
+      <ion-label position="floating" color="primary">Nome</ion-label>
       <ion-input type="text" formControlName="nome"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -18,7 +19,7 @@
       </ng-container>
     </div>
     <ion-item>
-      <ion-label  position="floating" color="primary">Email</ion-label>
+      <ion-label position="floating" color="primary">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -29,7 +30,7 @@
       </ng-container>
     </div>
     <ion-item>
-      <ion-label  position="floating" color="primary">Senha</ion-label>
+      <ion-label position="floating" color="primary">Senha</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -40,7 +41,7 @@
       </ng-container>
     </div>
     <ion-item>
-      <ion-label  position="floating" color="primary">Celular</ion-label>
+      <ion-label position="floating" color="primary">Celular</ion-label>
       <ion-input type="text" formControlName="celular" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -51,7 +52,7 @@
       </ng-container>
     </div>
     
-    <ion-button  class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Cadastrar</ion-button>
+    <ion-button expand="block" size="large" class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Cadastrar</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
