--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -14,7 +14,7 @@
 
   <ion-list>
     <ion-item-sliding>
-      <ion-item *ngFor="let musica of musicasEncontradas">
+      <ion-item button *ngFor="let musica of musicasEncontradas">
         <ion-avatar slot="start">
           <img src="{{musica.thumbnail}}">
         </ion-avatar>
