--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,9 @@
     <ion-title>
       SpotiiFree - Home
     </ion-title>
+    <ion-button slot="end" (click)="gotoLogin()">
+      <ion-icon name="person"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
