--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -6,23 +6,20 @@
 
 <ion-content>
   <ion-list>
-    <ion-list>
-      <ion-item-sliding>
-        <ion-item>
-          <ion-label>Item</ion-label>
-        </ion-item>
-        <ion-item-options side="end">
-          <ion-item-option (click)="unread(item)">Unread</ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-    
-      <ion-item-sliding>
-        <ion-item>
-          <ion-label>Item</ion-label>
-        </ion-item>
-        <ion-item-options side="end">
-          <ion-item-option (click)="unread(item)">Unread</ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-    </ion-list>
+    <ion-item-sliding>
+      <ion-item button *ngFor="let playlist of playlist">
+        <ion-avatar slot="start">
+          <img src="{{playlist.thumbnail}}">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{playlist.name}}</h2>
+          <h3>{{playlist.author}}</h3>
+          <p>{{playlist.description}}</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
