Ajuste para mostrar menu e icone

--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>playlist</ion-title>
+    <ion-buttons slot="start" color="primary">
+      <ion-menu-button></ion-menu-button>
+      <img src="assets/icon/favicon.ico" width="32px" style="float: left">
+    </ion-buttons>
+    <ion-title>SpotiiFree - Playlist</ion-title>
   </ion-toolbar>
 </ion-header>
 
