--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -4,14 +4,12 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <img src="assets/icon/favicon.ico" width="32px" style="float: left">
-    <ion-title>SpotiiFree - Buscar música</ion-title>
+    <ion-title>SpotiiFree - Buscar Música</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-    <ion-searchbar showCancelButton="focus" animated="true" cancelButtonText="Custom Cancel"></ion-searchbar>
-
+  <ion-searchbar showCancelButton="focus" animated="true" cancelButtonText="Custom Cancel"></ion-searchbar>
   <ion-list>
     <ion-item-sliding>
       <ion-item button *ngFor="let musica of musicasEncontradas">
