--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -12,22 +12,18 @@
   <ion-searchbar (click)="buscar()" [(ngModel)]="search" showCancelButton="focus" animated="true" cancelButtonText="Custom Cancel"></ion-searchbar>
   <ion-list>
     <ion-item-sliding>
-      <ion-item button *ngFor="let musica of musicasEncontradas">
+      <ion-item (click)="tocar(musica[0])" button *ngFor="let musica of musicasEncontradas">
         <ion-avatar slot="start">
-          <img src="{{musica.artwork_url}}">
+          <img src="{{musica[0].artwork_url}}">
         </ion-avatar>
         <ion-label>
-          <h2>{{musica.title}}</h2>
-          <h3>{{musica.album}}</h3>
-          <p>{{musica.description}}</p>
+          <h2>{{musica[0].title}}</h2>
+          <h3>{{musica[0].album}}</h3>
+          <p>{{musica[0].description}}</p>
         </ion-label>
-        <audio controls>
-          <source src="https://music-streaming-thing.herokuapp.com/stream/{{musica.data}}">
-        </audio>
       </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)="unread(item)">Unread</ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding> 
+    </ion-item-sliding>
+    <audio controls src="https://music-streaming-thing.herokuapp.com/stream/{{musicaTocando.data}}">
+    </audio>
   </ion-list>
 </ion-content>
