--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -9,7 +9,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar (click)="buscar()" [(ngModel)]="search" showCancelButton="focus" animated="true" cancelButtonText="Custom Cancel"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="search"></ion-searchbar>
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+      <ion-fab-button (click)="buscar()" color="secondary" mode="ios">
+          <ion-icon name="arrow-round-forward"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   <ion-list>
     <ion-item-sliding>
       <ion-item (click)="tocar(musica[0])" button *ngFor="let musica of musicasEncontradas">
@@ -23,7 +28,5 @@
         </ion-label>
       </ion-item>
     </ion-item-sliding>
-    <audio controls src="https://music-streaming-thing.herokuapp.com/stream/{{musicaTocando.data}}">
-    </audio>
   </ion-list>
 </ion-content>
