--- a/src/app/player/player.page.html
+++ b/src/app/player/player.page.html
@@ -9,5 +9,49 @@
 </ion-header>
 
 <ion-content>
-  <audio autoplay controls src="https://music-streaming-thing.herokuapp.com/stream/{{musica.data}}"></audio>
+
+  <audio autoplay controls hidden id="song" (timeupdate)="updateTime()">
+    <source src="https://music-streaming-thing.herokuapp.com/stream/{{musica.data}}">
+  </audio>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4">
+        {{musica.title}}
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <img src="{{musica.artwork_url}}">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2"></ion-col>
+      <ion-col>
+        <ion-icon size="large" name="skip-backward"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <div id="songPlayPause" (click)="playPause()">
+          <ion-icon size="large" name="{{playOrPause}}"></ion-icon>
+        </div>
+      </ion-col>
+      <ion-col>
+        <ion-icon size="large" name="skip-forward"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4"></ion-col>
+      <ion-col class="ion-justify-content-center">
+        <div>{{songTime}}</div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-range min="0" [max]="activeSong.duration" step="1" [value]="activeSong.currentTime" color="secondary"></ion-range>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
