--- a/src/app/player/player.page.html
+++ b/src/app/player/player.page.html
@@ -16,14 +16,16 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="4">
-        {{musica.title}}
+      <ion-col>
+        {{musica.title}} - {{musica.artists[0]}} ({{musica.album}})
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <img src="{{musica.artwork_url}}">
+        <div id="imgContainer">
+          <img src="{{musica.artwork_url}}">
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -49,9 +51,22 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-range min="0" [max]="activeSong.duration" step="1" [value]="activeSong.currentTime" color="secondary"></ion-range>
+          <ion-range min="0" [max]="activeSong.duration" step="1" [value]="activeSong.currentTime" color="secondary">
+          </ion-range>
         </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
+<style>
+  #imgContainer img {
+    border-style: double;
+    border-width: 4px;
+    border-color: #ccc;
+    border-radius: 10px;
+  }
+
+  #imgContainer {
+    padding: 5%;
+  }
+</style>
