--- a/src/app/player/player.page.html
+++ b/src/app/player/player.page.html
@@ -10,9 +10,7 @@
 
 <ion-content>
 
-  <audio autoplay controls hidden id="song" (timeupdate)="updateTime()">
-    <source src="https://music-streaming-thing.herokuapp.com/stream/{{musica.data}}">
-  </audio>
+  <audio autoplay controls hidden id="song" (timeupdate)="updateTime()"></audio>
 
   <ion-grid>
     <ion-row>
@@ -31,7 +29,7 @@
     <ion-row>
       <ion-col size="2"></ion-col>
       <ion-col>
-        <ion-icon size="large" name="skip-backward"></ion-icon>
+        <ion-icon *ngIf="playerService.posTocando != 0" (click)="prev()" size="large" name="skip-backward"></ion-icon>
       </ion-col>
       <ion-col>
         <div id="songPlayPause" (click)="playPause()">
@@ -39,7 +37,7 @@
         </div>
       </ion-col>
       <ion-col>
-        <ion-icon size="large" name="skip-forward"></ion-icon>
+        <ion-icon *ngIf="playerService.posTocando != playerService.qtdMusicas-1" (click)="next()" size="large" name="skip-forward"></ion-icon>
       </ion-col>
     </ion-row>
     <ion-row>
