--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -9,5 +9,11 @@
 </ion-header>
 
 <ion-content>
+  <div class="ion-padding">
 
+    <p>Vamos bater uma foto:</p>
+    <ion-button (click)="baterFoto()">bater uma foto</ion-button>
+    <img *ngIf="imagem" [src]="imagem">
+
+  </div>
 </ion-content>
