salvar favoritos no service player

--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -23,7 +23,7 @@
         </ion-avatar>
         <ion-label>
           <h2>{{musica[0].title}}</h2>
-          <h3>{{musica[0].album}}</h3>
+          <h3>{{musica[0].artists[0]}} ({{musica[0].album}})</h3>
           <p>{{musica[0].description}}</p>
         </ion-label>
       </ion-item>
