--- a/src/app/player/player.page.html
+++ b/src/app/player/player.page.html
@@ -23,6 +23,7 @@
       <ion-col>
         <div id="imgContainer">
           <img src="{{musica.artwork_url}}">
+          <ion-icon (click)="favorite()" size="large" [name]="iconFavorite"></ion-icon>
         </div>
       </ion-col>
     </ion-row>
@@ -61,6 +62,14 @@
     border-style: double;
     border-width: 4px;
     border-color: #ccc;
+    border-radius: 10px;
+  }
+
+  #imgContainer ion-icon {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    background: #fff;
     border-radius: 10px;
   }
 
