--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,19 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start" color="primary">
-      <ion-menu-button></ion-menu-button>
-      <img src="assets/icon/favicon.ico" width="32px" style="float: left">
-    </ion-buttons>
-    <ion-title>SpotiiFree - Perfil</ion-title>
+    <ion-title>perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-
-    <p>Vamos bater uma foto:</p>
-    <ion-button (click)="baterFoto()">bater uma foto</ion-button>
-    <img *ngIf="imagem" [src]="imagem">
-
+  <div class="card">
+    <div class="header">
+      <div class="avatar">
+        <img src="../../assets/player104.png" alt="">
+      </div>
+    </div>
   </div>
+
+  <div class="card-body">
+    <div class="user-meta ion-text-center">
+      <h3 class="playername">Roger Federer</h3>
+      <h5 class="country">Switzerland</h5>
+      <h6 class="ranking">Current ranking: <ion-chip>
+        <ion-label>2</ion-label>
+        </ion-chip>
+      </h6>
+    </div>
+    <ion-button expand="full" color="primary">http://rogerfederer.com</ion-button>
+    <ion-button expand="full" color="secondary">@RogerFederer on Twitter</ion-button>
+    <ion-button expand="full" color="secondary">View profile at ATP</ion-button>
+  </div>
+
+  <ion-button (click)="baterFoto()"></ion-button>
+  <img *ngIf="imagem" [src]="imagem">
 </ion-content>
