Apresentando email no perfil do usuário

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>perfil</ion-title>
+    <ion-title>SpotiiFree - Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,6 @@
   <div class="card-body">
     <div class="user-meta ion-text-center">
       <h3 class="playername">{{username}}</h3>
-        <ion-label>2</ion-label>
     </div>
     <ion-button expand="full" color="primary">{{useremail}}</ion-button>
   </div>
