Alteração página de perfil

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -19,6 +19,8 @@
     </div>
     <ion-button expand="full" color="primary">{{useremail}}</ion-button>
   </div>
-    <ion-button (click)="baterFoto()">Foto</ion-button>
+    <ion-button (click)="baterFoto()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-button>
     
 </ion-content>
