--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SpotiiFree - Perfil</ion-title>
+    <ion-buttons slot="start" color="primary">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <img src="assets/icon/favicon.ico" width="32px" style="float: left">
+    <ion-title>SpotiiFree - Tocar Música</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,6 +14,9 @@
       <div class="avatar">
         <img *ngIf="imagem" [src]="imagem">
       </div>
+      <ion-button slot="secondary" (click)="baterFoto()">
+        <ion-icon name="camera"></ion-icon>
+      </ion-button>
     </div>
   </div>
 
@@ -19,8 +26,5 @@
     </div>
     <ion-button expand="full" color="primary">{{useremail}}</ion-button>
   </div>
-    <ion-button (click)="baterFoto()">
-      <ion-icon name="camera"></ion-icon>
-    </ion-button>
     
 </ion-content>
