--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -39,7 +39,7 @@
                 border-radius: 50%;
                 position: absolute;
                 bottom: calc(-1*(80px + 4px));
-                border: 8px solid deeppink;
+                border: 8px solid #ff1493;
                 background-color: #fff;
             }
         }
