--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -3,12 +3,16 @@
     <ion-buttons slot="start" color="primary">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-button slot="end" (click)="gotoLogoff()">
+        <ion-icon name="log-out"></ion-icon>
+    </ion-button>
     <img src="assets/icon/favicon.ico" width="32px" style="float: left">
     <ion-title>SpotiiFree - Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
   <div class="card">
     <div class="header">
       <div class="avatar">
