valor padrão para duração da música atual

--- a/src/app/player/player.page.html
+++ b/src/app/player/player.page.html
@@ -50,7 +50,7 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-range min="0" [max]="activeSong.duration" step="1" [value]="activeSong.currentTime" color="secondary">
+          <ion-range min="0" [max]="duration" step="0.001" [value]="activeSong.currentTime" color="secondary">
           </ion-range>
         </ion-item>
       </ion-col>
